--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
             cd /repos/tutor-frontend
 
             echo "Pulling latest changes using SSH..."
-            git remote set-url origin git@github-faiqsrp:faiqsrp/tutor-backend.git
+            git remote set-url origin git@github-faiqsrp:faiqsrp/tutor-frontend.git
             git fetch origin
             git reset --hard origin/main
 
